--- a/Services/src/main/resources/webutils/css/webutils.css
+++ b/Services/src/main/resources/webutils/css/webutils.css
@@ -1,7 +1,14 @@
+* 
+{
+  /* So 100% means 100% */
+  box-sizing: border-box;
+}
+
 body
 {
 	font-family: "Times New Roman", Times, serif;
 	letter-spacing: 0.5px;
+	min-height: 100vh;
 }
 
 .fullPage
