--- a/Services/src/main/resources/webutils/templates/form-templates.html
+++ b/Services/src/main/resources/webutils/templates/form-templates.html
@@ -49,7 +49,7 @@
 				expr="context.attr('label-property')? '.' + context.attr('label-property') : ''"/>
 
 			<div class="input-group">
-				<input type="text" class="form-control" aria-label="..." style="width: ${_textWidth};" readonly="readonly" value="{{${attr('ng-model')}${_labelExpr}}}">
+				<input type="text" class="form-control" aria-label="..." style="width: ${_textWidth};" readonly="readonly" value="{{${attr('ng-model')}${_labelExpr}}}"/>
 				<div class="input-group-btn">
 					<button type="button" class="btn ${_buttonClass} dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						${_label} <span class="caret"></span>
@@ -65,6 +65,7 @@
 		</content>
 
 		<post-script>
+			/*
 			context.$scope["_combonLinkOnClick_" + context.attr("id")] = $scope.proxy(function(item) {
 				var $scope = this.$scope;
 				eval("$scope." + this.model + " = item");
@@ -84,6 +85,7 @@
 			anchorElements.off("click").on("click", $.proxy(function(event){
 				this.element.find("input").trigger("change");
 			}, {"element": element, "$scope" : context.$scope}));
+			*/
 		</post-script>
 	</directive>
 
