--- a/Services/src/main/resources/webutils/templates/webutils-templates.html
+++ b/Services/src/main/resources/webutils/templates/webutils-templates.html
@@ -611,7 +611,7 @@
 							</table>
 						</div>
 		
-						<div class="panel-body table-responsive"  yk-model="${searchModel.name}" style="padding: 0px;">
+						<div class="panel-body table-responsive"  yk-model="${searchModel.name}" style="padding: 0px; overflow: auto; width: 100%; max-height: 25em;">
 							<table class="table table-striped table-bordered table-hover searchResults" ng-if="searchResults.length &gt; 0">
 								<!-- Headings row -->
 								<tr>
